# farm

./: pnpm-lock.yaml
crates/bench/: CHANGELOG.md
crates/compiler/: CHANGELOG.md
crates/core/: CHANGELOG.md
crates/create-farm-rs/: CHANGELOG.md
crates/plugin_bundle/: CHANGELOG.md
crates/plugin_css/: CHANGELOG.md
crates/plugin_define/: CHANGELOG.md
crates/plugin_html/: CHANGELOG.md
crates/plugin_json/: CHANGELOG.md
crates/plugin_lazy_compilation/: CHANGELOG.md
crates/plugin_minify/: CHANGELOG.md
crates/plugin_partial_bundling/: CHANGELOG.md
crates/plugin_polyfill/: CHANGELOG.md
crates/plugin_progress/: CHANGELOG.md
rust-plugins/module-federation/: Cargo.toml  package.json
rust-plugins/module-federation/npm/darwin-arm64/: README.md  package.json
rust-plugins/module-federation/npm/darwin-x64/: README.md  package.json
rust-plugins/module-federation/npm/linux-arm64-gnu/: README.md  package.json
rust-plugins/module-federation/npm/linux-arm64-musl/: README.md  package.json
rust-plugins/module-federation/npm/linux-x64-gnu/: README.md  package.json
rust-plugins/module-federation/npm/linux-x64-musl/: README.md  package.json
rust-plugins/module-federation/npm/win32-arm64-msvc/: README.md  package.json
rust-plugins/module-federation/npm/win32-ia32-msvc/: README.md  package.json
rust-plugins/module-federation/npm/win32-x64-msvc/: README.md  package.json
rust-plugins/module-federation/playground/: package.json
rust-plugins/module-federation/scripts/: index.js
rust-plugins/module-federation/src/: federation_options.rs  lib.rs
(+16 files in other folders)
